[gd_scene load_steps=17 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/town/background01.png" type="Texture" id=2]
[ext_resource path="res://Scenes/building_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/town/token.png" type="Texture" id=5]
[ext_resource path="res://Assets/player_se.png" type="Texture" id=6]
[ext_resource path="res://Assets/town/overlay01.png" type="Texture" id=7]
[ext_resource path="res://Scenes/startrucks_token.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/selfie_token.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/town/colliders01.png" type="Texture" id=10]
[ext_resource path="res://Scenes/hotspot_scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/music.gd" type="Script" id=12]
[ext_resource path="res://Assets/audio/millenial_hero_1_v2.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/audio/millenial_hero_2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/audio/millenial_hero_3_v1.ogg" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.22867

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

editor/display_folded = true
texture = ExtResource( 2 )

[node name="building" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 1.76868, -353.729 )

[node name="building1" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 157.409, -265.886 )

[node name="building2" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 312.461, -178.044 )

[node name="building3" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 468.282, -90.0912 )

[node name="building4" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 624.796, -0.753693 )

[node name="building5" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 781.31, 87.1988 )

[node name="building6" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -155.003, -265.304 )

[node name="building7" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 0.818054, -177.351 )

[node name="building8" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 155.947, -88.7061 )

[node name="building9" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 312.461, -0.753632 )

[node name="building10" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 468.282, 88.584 )

[node name="building11" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 624.796, 176.536 )

[node name="building12" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -310.825, -175.273 )

[node name="building13" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -155.696, -87.321 )

[node name="building14" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -0.567047, 0.63147 )

[node name="building15" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 157.332, 88.5839 )

[node name="building16" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 311.768, 177.229 )

[node name="building17" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 469.667, 265.181 )

[node name="building18" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -465.953, -88.0135 )

[node name="building19" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -312.21, 0.631439 )

[node name="building20" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -156.388, 88.5839 )

[node name="building21" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -0.567047, 177.229 )

[node name="building22" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 154.562, 265.181 )

[node name="building23" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 311.768, 353.826 )

[node name="building24" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -624.843, 2.41034 )

[node name="building25" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -468.824, 89.6413 )

[node name="building26" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -312.307, 177.371 )

[node name="building27" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -157.285, 265.599 )

[node name="building28" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -2.26337, 353.826 )

[node name="building29" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 155.749, 442.054 )

[node name="building30" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -781.36, 90.6382 )

[node name="building31" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -625.84, 178.368 )

[node name="building32" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -469.821, 266.595 )

[node name="building33" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -313.802, 355.322 )

[node name="building34" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -158.282, 443.55 )

[node name="building35" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -1.26642, 531.279 )

[node name="player" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 154.025, 147.817 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.544891, 3.29282 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.1
script/script = ExtResource( 4 )

[node name="token" type="Sprite" parent="player"]

transform/pos = Vector2( 0, -35 )
z/z = 1
z/relative = false
texture = ExtResource( 5 )

[node name="sprite" type="Sprite" parent="player"]

texture = ExtResource( 6 )

[node name="shape" type="CollisionShape2D" parent="player"]

transform/pos = Vector2( -0.544891, 3.29282 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="player"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit/left = -960
limit/top = -680
limit/right = 960
limit/bottom = 680
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="overlay" type="Sprite" parent="."]

transform/pos = Vector2( 0.262939, -0.187378 )
texture = ExtResource( 7 )

[node name="tokens" type="Node2D" parent="."]

editor/display_folded = true

[node name="startrucks" parent="tokens" instance=ExtResource( 8 )]

transform/pos = Vector2( 278.543, 16.8488 )

[node name="startrucks1" parent="tokens" instance=ExtResource( 8 )]

transform/pos = Vector2( -397.356, 104.383 )

[node name="Selfie" parent="tokens" instance=ExtResource( 9 )]

transform/pos = Vector2( 119.667, 100.831 )
frame = 20

[node name="Selfie1" parent="tokens" instance=ExtResource( 9 )]

transform/pos = Vector2( -64.2658, -165.097 )
frame = 19

[node name="Selfie2" parent="tokens" instance=ExtResource( 9 )]

transform/pos = Vector2( 427.7, 99.7228 )
frame = 19

[node name="Selfie3" parent="tokens" instance=ExtResource( 9 )]

transform/pos = Vector2( -245.983, 183.933 )
frame = 18

[node name="Selfie4" parent="tokens" instance=ExtResource( 9 )]

transform/pos = Vector2( -213.85, -94.1826 )
frame = 17

[node name="overlay1" type="Sprite" parent="."]

visibility/opacity = 0.7
transform/pos = Vector2( 0.262939, -0.187378 )
texture = ExtResource( 7 )

[node name="collition_ref" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 10 )

[node name="hotspot" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 49.0327, 96.5567 )

[node name="hotspot1" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( -205.475, 73.2567 )

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( -9.14972, 683.883 )

[node name="Node" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 12 )

[node name="music_1" type="StreamPlayer" parent="Node"]

stream/stream = ExtResource( 13 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="music_2" type="StreamPlayer" parent="Node"]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="music_3" type="StreamPlayer" parent="Node"]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="animation_fadeout" type="Tween" parent="Node"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="animation_fadein" type="Tween" parent="Node"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -52.0
margin/right = 27.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "MUSIC"
flat = false

[connection signal="on_hotspot_enter" from="hotspot" to="player" method="_on_hotspot_enter"]

[connection signal="on_hotspot_exit" from="hotspot" to="player" method="_on_hotspot_exit"]

[connection signal="on_hotspot_enter" from="hotspot1" to="player" method="_on_hotspot_enter"]

[connection signal="on_hotspot_exit" from="hotspot1" to="player" method="_on_hotspot_exit"]

[connection signal="button_up" from="Button" to="Node" method="_on_Button_button_up"]


